# gamepads-of-valhalla

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASING.md
config/: sdljoy.ini
release/: README.txt  THIRD_PARTY.txt  apply-gamepad-config.bat  copy_this_to_User_ini.txt  patch-config.ps1  restore-original-config.bat
scripts/: gen_forwarders.py
src/: config.cpp  config.h  dllmain.cpp  joystick.cpp  proxy.h
